# ptto

./: CONTRIBUTE.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml  release-artifacts.yml  release.yml
src/: cli.rs  commands.rs  config.rs  lib.rs  main.rs  ssh.rs
tests/: cli_smoke.rs
