[package]
name = "ptto"
version = "0.1.5"
edition = "2021"
description = "A highly opinionated CLI to deploy single-binary web apps to a single VPS"
license = "MIT"
repository = "https://github.com/lhemerly/ptto/"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "process", "fs"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
